--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@ button:hover { opacity:0.85; }
 
 <script>
 const firebaseConfig = {
-  apiKey: "TU_API_KEY",
-  authDomain: "tu-proyecto.firebaseapp.com",
-  projectId: "tu-proyecto",
-  storageBucket: "tu-proyecto.appspot.com",
-  messagingSenderId: "XXXXXX",
-  appId: "XXXXXX"
+  apiKey: "AIzaSyCA2fZvN8WVKWwEDL0z694C2o5190OMhq8",
+  authDomain: "gestioncandy-b9356.firebaseapp.com",
+  projectId: "gestioncandy-b9356",
+  storageBucket: "gestioncandy-b9356.firebasestorage.app",
+  messagingSenderId: "869982852654",
+  appId: "1:869982852654:web:ac450321a746e62365f1bf"
 };
 firebase.initializeApp(firebaseConfig);
 const db = firebase.firestore();
