--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     .btn.renew{background:#064e3b;color:var(--accent)}
     .btn.copy{background:#0b1220;color:var(--muted);border:1px solid rgba(255,255,255,0.03)}
     .btn.delete{background:#3b0b0b;color:#ffcfcf}
-    .btn.export{background:var(--yellow);color:#212108;} /* NUEVO */
+    .btn.export{background:var(--yellow);color:#212108;}
     .card-form{background:var(--card);padding:14px;border-radius:12px;border:1px solid rgba(255,255,255,0.04)}
     form{display:grid;gap:10px}
     label{font-size:13px;color:var(--muted)}
@@ -63,7 +63,7 @@
     .toast { background: var(--card); color: #e6eef6; padding: 12px 18px; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.2); min-width: 250px; max-width: 350px; opacity: 0; transition: opacity 0.3s, transform 0.3s; transform: translateY(-20px); }
     .toast.show { opacity: 1; transform: translateY(0); }
     .toast.success { border-left: 4px solid var(--green); }
-    .toast.error { border-left: 44px solid var(--red); }
+    .toast.error { border-left: 4px solid var(--red); }
     .toast strong { display: block; margin-bottom: 4px; font-size: 14px; }
     .toast p { margin: 0; font-size: 13px; color: var(--muted); }
     /* Dashboard: checkbox */
@@ -413,7 +413,6 @@ function isoForInput(d){
   return `${yyyy}-${mm}-${dd}`;
 }
 
-// ... (Resto de funciones: showNotification, setActive, etc.) ...
 function showNotification(title, message, type = 'success') {
   const toast = document.createElement('div');
   toast.className = `toast ${type}`;
@@ -480,7 +479,7 @@ onSnapshot(q, snap => {
   updateStats(cachedList);
 });
 
-// ... (filterByStat, filterClients, updateStats, renderDashboard, toggleRenovara se mantienen igual) ...
+// --- FILTRO DE CLIENTES POR STAT DEL DASHBOARD ---
 function filterByStat(filterType) {
     setActive(navClientes);
     secDashboard.style.display='none';
@@ -604,6 +603,7 @@ function renderDashboard(list){
   });
 }
 
+// DEFINIDA EN EL AMBITO GLOBAL
 window.toggleRenovara = async function(checkbox) {
     const id = checkbox.getAttribute('data-id');
     const newState = checkbox.checked;
@@ -628,9 +628,9 @@ window.toggleRenovara = async function(checkbox) {
 }
 
 
-// --- 1. INDICADORES VISUALES DE CADUCIDAD (MODIFICACIÓN DE renderClients) ---
+// --- INDICADORES VISUALES DE CADUCIDAD ---
 function getExpiryStatus(caducidad) {
-    if (!caducidad) return 'status-green'; // Por defecto, si no tiene fecha
+    if (!caducidad) return 'status-green'; 
 
     const dateCaducidad = new Date(caducidad);
     const now = new Date();
@@ -638,11 +638,11 @@ function getExpiryStatus(caducidad) {
     const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
 
     if (diffDays < 0) {
-        return 'status-red'; // Caducado
+        return 'status-red'; 
     } else if (diffDays <= 7) {
-        return 'status-yellow'; // Caduca en 7 días o menos
+        return 'status-yellow'; 
     } else {
-        return 'status-green'; // Más de 7 días
+        return 'status-green'; 
     }
 }
 
@@ -663,11 +663,9 @@ function renderClients(list){
         recommendationsHTML = `<div class="meta">Recomendado por: ${recs.join(', ')}</div>`;
     }
     
-    // **NUEVO** Obtener la clase de estado
     const statusClass = getExpiryStatus(item.caducidad);
 
     const card = document.createElement('div');
-    // **NUEVO** Añadir la clase de estado a la tarjeta
     card.className = `card ${statusClass}`;
     card.innerHTML = `
       <h4>${item.nombre}</h4>
@@ -689,9 +687,8 @@ function renderClients(list){
 }
 
 
-// --- 2. AUTOCOMPLETADO Y DINÁMICO DE RECOMENDACIONES ---
+// --- LÓGICA DE RECOMENDACIONES DINÁMICAS Y AUTOCOMPLETADO ---
 
-// RENDERIZA LAS ETIQUETAS DE RECOMENDACIÓN
 function renderRecommendedClients(recommendations, targetDiv) {
     targetDiv.innerHTML = '';
     recommendations.forEach((name, index) => {
@@ -706,11 +703,9 @@ function renderRecommendedClients(recommendations, targetDiv) {
     });
 }
 
-// AÑADE UN CLIENTE A LA LISTA
 function addRecommendedClient(name, inputElement, targetDiv) {
     if (name === "") return;
 
-    // Validación de existencia y duplicados
     if (!cachedClientNames.has(name)) {
         showNotification("Error de Recomendación", `El cliente "${name}" no existe en la base de datos.`, 'error');
         return;
@@ -724,10 +719,11 @@ function addRecommendedClient(name, inputElement, targetDiv) {
     renderRecommendedClients(currentRecommendations, targetDiv);
     inputElement.value = '';
     // Cerrar el autocompletado después de añadir
-    inputElement.nextElementSibling.nextElementSibling.remove();
+    if (inputElement.nextElementSibling && inputElement.nextElementSibling.classList.contains('autocomplete-list')) {
+        inputElement.nextElementSibling.remove();
+    }
 }
 
-// ELIMINA UN CLIENTE DE LA LISTA
 function removeRecommendedClient(button) {
     const index = parseInt(button.getAttribute('data-index'));
     const targetId = button.getAttribute('data-target-id');
@@ -778,7 +774,6 @@ function autocomplete(input, container, targetDiv) {
         }
     });
 
-    // Control de teclado para la lista
     input.addEventListener("keydown", function(e) {
         let x = document.getElementById(listId);
         if (x) x = x.getElementsByTagName("li");
@@ -794,7 +789,6 @@ function autocomplete(input, container, targetDiv) {
             if (currentFocus > -1 && x) {
                 x[currentFocus].click();
             } else {
-                // Si pulsa Enter sin seleccionar, intentar añadir el valor del input
                 addRecommendedClient(input.value.trim(), input, targetDiv);
             }
         }
@@ -815,7 +809,6 @@ function autocomplete(input, container, targetDiv) {
     }
 
     document.addEventListener("click", function (e) {
-        // Cierra la lista si se hace clic fuera
         if (!container.contains(e.target)) {
              closeAllLists();
         }
@@ -831,7 +824,7 @@ autocomplete(eNewRecommendationInput, eRecContainer, eRecommendedClientsDiv);
 eAddRecommendationBtn.addEventListener('click', () => addRecommendedClient(eNewRecommendationInput.value.trim(), eNewRecommendationInput, eRecommendedClientsDiv));
 
 
-// --- 3. FUNCIÓN DE EXPORTACIÓN A CSV ---
+// --- FUNCIÓN DE EXPORTACIÓN A CSV ---
 btnExportCsv.addEventListener('click', exportToCsv);
 
 function exportToCsv() {
@@ -848,27 +841,29 @@ function exportToCsv() {
     
     // Mapear los datos al formato CSV
     const csvRows = [];
-    csvRows.push(headers.join(';')); // Fila de cabeceras
+    csvRows.push(headers.join(';')); 
 
     cachedList.forEach(item => {
-        // Asegurarse de que las recomendaciones sean un string para CSV
         let recs = item.recomendaciones;
         if (Array.isArray(recs)) {
-            recs = recs.join(', '); // Convertir array a string
+            recs = recs.join(', '); 
         } else if (!recs) {
             recs = '';
         }
 
+        // Sanitización básica y formato
+        const sanitize = (str) => `"${(str || '').toString().replace(/"/g, '""')}"`;
+
         const row = [
-            `"${item.nombre || ''}"`,
+            sanitize(item.nombre),
             formatDate(item.creacion),
             formatDate(item.caducidad),
-            `"${item.usuario || ''}"`,
-            `"${item.contrasena || ''}"`,
-            `"${item.dispositivo || ''}"`,
-            `"${item.aplicacion || ''}"`,
+            sanitize(item.usuario),
+            sanitize(item.contrasena),
+            sanitize(item.dispositivo),
+            sanitize(item.aplicacion),
             item.renovara ? 'Si' : 'No',
-            `"${recs.replace(/"/g, '""')}"` // Sanitizar el campo de texto
+            sanitize(recs)
         ];
         csvRows.push(row.join(';'));
     });
@@ -889,8 +884,52 @@ function exportToCsv() {
 }
 
 
-// --- LÓGICA DE FORMULARIOS Y MODAL (Manejo de array de recomendaciones) ---
+// --- LÓGICA DE ACCIONES (DEFINIDAS EN EL ÁMBITO GLOBAL 'WINDOW') ---
 
+window.copyPassword = function(id){
+  const item = cachedList.find(i => i.id === id);
+  if(!item || !item.contrasena) {
+    showNotification("Error de Copia", "No hay contraseña o datos completos para copiar.", 'error');
+    return;
+  }
+  const textToCopy = `Usuario: ${item.usuario || "-"}\nContraseña: ${item.contrasena || "-"}\nCaducidad: ${formatDate(item.caducidad)}\nAplicación: ${item.aplicacion || "-"}`;
+  navigator.clipboard.writeText(textToCopy);
+  showNotification("Copiado", "Datos clave copiados al portapapeles.", 'success');
+}
+
+window.renewItem = async function(id){
+  const item = cachedList.find(i => i.id === id);
+  if(!item) return;
+
+  let date = new Date(item.caducidad || new Date());
+  date.setMonth(date.getMonth() + 3); 
+
+  try {
+      await updateDoc(doc(db, "clientes", id), {
+        caducidad: date.toISOString()
+      });
+      showNotification("Renovación Exitosa", "Cliente renovado por 3 meses.", 'success');
+  } catch (error) {
+      showNotification("Error de Renovación", "No se pudo renovar el cliente.", 'error');
+      console.error("Error renewing item:", error);
+  }
+}
+
+// *** FUNCIÓN CORREGIDA QUE RESUELVE EL ERROR 'is not defined' ***
+window.deleteItem = async function(id){
+  if(!confirm("¿Estás seguro de que quieres eliminar este cliente? Esta acción no se puede deshacer.")) return;
+  
+  try {
+      await deleteDoc(doc(db, "clientes", id)); 
+      showNotification("Eliminado", "Cliente eliminado correctamente.", 'success');
+  } catch (error) {
+      // Si el error persiste, revisar las Reglas de Firebase, ya que el problema de JavaScript está resuelto.
+      showNotification("Error", "No se pudo eliminar el cliente. Revisa la consola para el error detallado.", 'error');
+      console.error("Error deleting item:", error);
+  }
+}
+
+// ABRIR MODAL DE EDICIÓN (También requiere ser global)
 window.openEdit = function(id){
   const item = cachedList.find(i => i.id === id);
   if(!item) return;
@@ -918,10 +957,12 @@ window.openEdit = function(id){
   modal.classList.add('show');
 };
 
+// CERRAR MODAL
 modalCancelBtn.addEventListener('click', ()=>{
   modal.classList.remove('show');
 });
 
+// GUARDAR CAMBIOS EN MODAL
 formEdit.addEventListener('submit', async e=>{
   e.preventDefault();
   const id = modal.getAttribute('data-id');
@@ -949,6 +990,7 @@ formEdit.addEventListener('submit', async e=>{
   }
 });
 
+// AÑADIR CLIENTE NUEVO
 formAdd.addEventListener('submit', async e=>{
   e.preventDefault();
 
@@ -984,18 +1026,6 @@ fReset.addEventListener('click', ()=> {
     currentRecommendations = [];
     renderRecommendedClients(currentRecommendations, fRecommendedClientsDiv);
 });
-
-// ... (copyPassword, renewItem, deleteItem se mantienen) ...
-window.copyPassword = function(id){
-  const item = cachedList.find(i => i.id === id);
-  if(!item || !item.contrasena) {
-    showNotification("Error de Copia", "No hay contraseña o datos completos para copiar.", 'error');
-    return;
-  }
-  const textToCopy = `Usuario: ${item.usuario || "-"}\nContraseña: ${item.contrasena || "-"}\nCaducidad: ${formatDate(item.caducidad)}\nAplicación: ${item.aplicacion || "-"}`;
-  navigator.clipboard.writeText(textToCopy);
-  showNotification("Copiado", "Datos clave copiados al portapapeles.", 'success');
-}
 
 </script>
 </body>
